# vDocs

./: README.md  pyproject.toml  usecase.md
src/vdocs/: script.py  vdocs.py  vdocs_csv.j2  vdocs_html.j2  vdocs_markdown.j2  vdocs_mindmap.j2
