[tool.poetry]
name = "vdocs"
version = "0.1.8"
description = "Business ready documents from Cisco SD-WAN vManage"
authors = ["John Capobianco <ptcapo@gmail.com>"]
packages = [{ include = "vdocs", from = "src"}]
readme = "README.md"

[tool.poetry.scripts]
vdocs = "vdocs.script:run"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
rich-click = "^1.6.1"
jinja2 = "^3.1.2"
pyyaml = "^6.0"
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
